# fast-api_zero

./: .coverage  .gitignore  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: d56d40794dea_create_users_table.py  ff63da426d4d_exercicio_02_aula_04.py
project/: __init__.py  app.py  database.py  models.py  schemas.py  security.py
project/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
